--- a/view/index.html
+++ b/view/index.html
@@ -3,6 +3,11 @@
 {% block head %}
 <link rel="stylesheet" type="text/css" href="/public/css/page-sj-qa-login.css" />
 <link rel="stylesheet" type="text/css" href="/public/css/page-sj-qa-logined.css" />
+<style>
+  .disabled a {
+    color: #ccc !important;
+  }
+</style>
 {% endblock %}
 
 {% block main %}
@@ -59,18 +64,9 @@
                   </li>
                   {% endfor %}
                 </ul>
-                <div class="sui-pagination">
-                  <ul>
-                    <li class="prev"><a href="#">上一页</a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li class="dotted"><span>...</span></li>
-                    <li class="next"><a href="#">下一页</a></li>
-                  </ul>
-                </div>
+                <!-- 分页器代码块 -->
+                {% from "./pagination/index.html" import pagination %}
+                {{ pagination(_page=_page, _limit=_limit, total=total, lastPage=lastPage) }}
               </div>
               <div id="hot" class="tab-pane">
                 <p>热门回答</p>
