--- a/view/layout/header.html
+++ b/view/layout/header.html
@@ -7,8 +7,8 @@
         <span class="btn-search fa fa-search"></span>
       </form>
       <ul class="sui-nav">
-        <li class="active"><a href="./headline-logined.html">首页</a></li>
-        <li><a href="./qa-login.html">话题</a></li>
+        <li class="active"><a href="/">首页</a></li>
+        <li><a href="/tags">话题</a></li>
       </ul>
       <div class="sui-nav pull-right info">
         {% if user %}
