--- a/view/tags-index.html
+++ b/view/tags-index.html
@@ -16,7 +16,7 @@
       {% for tag in tags %}
       <li class="tag-item yui3-u-1-4">
         <div class="inner">
-          <h5 class="title"><a href="qa-tagDetail.html" target="_blank">{{ tag.name }}</a></h5>
+          <h5 class="title"><a href="/?tag={{ tag.name }}" target="_blank">{{ tag.name }}</a></h5>
 
           <div class="guanzhu">
             <a class="sui-btn btn-guanzhu color">加关注</a>
