--- a/view/layout/layout.html
+++ b/view/layout/layout.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" type="text/css" href="/public/plugins/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="/public/css/widget-base.css" />
   <link rel="stylesheet" type="text/css" href="/public/css/widget-head-foot.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <!-- 各页面独自的head -->
   {% block head %}
   {% endblock %}
@@ -37,6 +38,7 @@
 
   <script src="/node_modules/jquery/dist/jquery.js"></script>
   <script src="/node_modules/jquery-validation/dist/jquery.validate.js"></script>
+  <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/node_modules/lodash/lodash.js"></script>
   <!-- 各页面独自的scrpit -->
   {% block script %}
